<resources>
	<string name="app_name">Library</string>
	<string name="title_activity_login">Benvenuto</string>
	<string name="password">Password</string>
	<string name="e_mail">E-mail</string>
	<string name="login_login">Accedi</string>
	<string name="authenticator_label">Authenticator</string>
	<string name="login_auth_token_label">Accesso ai servizi Laminox Remote Control</string>
	<string name="login_invalid_email">Email non valida</string>
	<string name="login_password_needed">Password necessaria</string>
	<string name="login_password_too_short">Minimo %d caratteri</string>
	<string name="login_register">Registrati</string>
	<string name="login_password_confirm_hint">Ripeti la password</string>
	<string name="scegli">scegli</string>
	<string name="login_continue_as">Continua come %s</string>
	<string name="login_multiple_existing_account">Continua con un account esistente</string>
	<string name="account_type">Default Account Type</string>
</resources>
