<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	android:id="@+id/login_coordinator"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/activity_toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay"/>

	</android.support.design.widget.AppBarLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:animateLayoutChanges="true"
			android:orientation="vertical">

			<ProgressBar
				android:id="@+id/login_progress"
				style="?android:attr/progressBarStyleLarge"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="16dp"
				android:visibility="gone"
				tools:visibility="visible"/>

			<LinearLayout
				android:id="@+id/login_panel_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<android.support.v7.widget.CardView
					android:id="@+id/login_continue_as_container"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="16dp"
					android:minHeight="48dp"
					android:visibility="gone"
					app:cardBackgroundColor="@color/md_white_1000"
					app:cardElevation="4dp"
					app:contentPadding="16dp"
					tools:visibility="visible">

					<TextView
						android:id="@+id/login_continue_as"
						style="@style/TextAppearance.AppCompat.Body1"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:textColor="@color/colorAccent"
						tools:text="Continua come mario.rossi@gmail.com"
						/>
				</android.support.v7.widget.CardView>

				<android.support.v7.widget.CardView
					android:id="@+id/login_panel"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="16dp"
					app:cardBackgroundColor="@color/colorAccentLight"
					app:cardElevation="4dp"
					app:theme="@style/LoginPanel">

					<View
						android:id="@+id/login_colored_background"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="@color/colorPrimary"
						android:visibility="invisible"/>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="32dp"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"
						android:layout_marginTop="16dp"
						android:orientation="vertical">

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

							<Button
								android:id="@+id/login_login_section"
								style="@style/Widget.AppCompat.Button.Borderless.Colored"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:gravity="center"
								android:padding="8dp"
								android:text="@string/login_login"
								android:textColor="@color/login_enabled_section_header_color"/>

							<Button
								android:id="@+id/login_register_section"
								style="@style/Widget.AppCompat.Button.Borderless.Colored"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:gravity="center"
								android:padding="8dp"
								android:text="@string/login_register"
								android:textColor="@color/login_disabled_section_header_color"/>
						</LinearLayout>

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal">

							<android.support.design.widget.TextInputLayout
								android:id="@+id/login_email_container"
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight="1">

								<EditText
									android:id="@+id/login_email"
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:hint="@string/e_mail"
									android:inputType="textEmailAddress"/>

							</android.support.design.widget.TextInputLayout>

							<Button
								android:id="@+id/login_choose_email"
								style="@style/Widget.AppCompat.Button.Borderless.Colored"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/scegli"/>
						</LinearLayout>

						<android.support.design.widget.TextInputLayout
							android:id="@+id/login_password_container"
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

							<EditText
								android:id="@+id/login_password"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:hint="@string/password"
								android:inputType="textPassword"/>
						</android.support.design.widget.TextInputLayout>

					</LinearLayout>
				</android.support.v7.widget.CardView>

			</LinearLayout>

		</LinearLayout>
	</ScrollView>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/login_fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_marginBottom="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="32dp"
		android:layout_marginTop="16dp"
		app:fabSize="normal"
		app:layout_anchor="@+id/login_panel"
		app:layout_anchorGravity="end|bottom"
		app:srcCompat="@drawable/ic_login"/>
</android.support.design.widget.CoordinatorLayout>
